--- a/ApiPeliculas/appsettings.json
+++ b/ApiPeliculas/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ApiSettings": {
+    "SecretKey": "TuClaveSecreta2975 esta disponible para este sistema mientras no este en produccion"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Server=LOCALHOST;Database=ApiPeliculasNET8;USER ID=sa;Password=TuContraseñaFuerte123;MultipleActiveResultSets=true;Trusted_Connection=True;Integrated Security=false;TrustServerCertificate=True"
 
